fix: Tag wrapping on smaller screens

--- a/app/components/Gallery/Gallery.module.css
+++ b/app/components/Gallery/Gallery.module.css
@@ -3,7 +3,7 @@
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
-  max-width: 1000px;
+  max-width: min(90%, 1000px);
   margin: 0 50px;
 }
 .nav > div {
@@ -186,22 +186,26 @@
   pointer-events: none;
   margin: 0;
   margin-top: 20px;
+  margin-bottom: 15px;
 }
 .card > div > p {
   width: 100%;
 }
 
 .tags {
-  display: inline-flex;
+  display: flex;
+  gap: 10px !important;
+  flex-wrap: wrap;
   flex-direction: row;
-  gap: 10px;
   width: 100%;
+  margin-bottom: 20px !important;
 }
 .tag {
   border-radius: 10px;
   border: var(--dark-color-a) 1px solid;
   color: var(--dark-color-a);
-  margin: 15px 0 !important;
+  width: fit-content;
+  margin: 0 !important;
   padding: 2px 10px;
 }
 
